[BOM-1163] refactor: 테스트 코드 개선 (#788)
* test: 통합 테스트 컨텍스트 재사용 개선

* test: 통합 테스트 컨텍스트 단일화

* test: 테스트 실행 구조와 성능 개선

* test: CleanUp 테이블 수집 구현

* test: CleanUp 테이블 수집 중복 제거 및 의도 명확화

* test: CleanUp DELETE 정리 구현

* test: CleanUp 정리 검증을 제외 테이블 직접 적재로 결정화

* test: CleanUp 검증 보강 및 stale 주석 제거

* test: 통합 테스트 DB 정리 자동화 및 수용 테스트 opt-out

* test: 자동 정리 테스트 순서 명시 및 의도 주석 보강

* test: challenge 통합 테스트 수동 DB 정리 제거

* test: holiday를 정리 대상에 포함하고 충돌 우회 제거

* test: 정리 제외 테이블을 활성 테스트 미변경 참조 seed로 한정

* test: reading/article/subscribe 통합 테스트 수동 DB 정리 제거

* test: 나머지 통합 테스트 수동 DB 정리 제거

* test: DB 정리 커넥션과 seed 격리 개선

* test: 데일리 가이드 API 테스트 통합

* test: 서비스 테스트 데이터 설정 단순화

* test: DisplayName 제거 및 테스트명 통일

* test: 컨트롤러 테스트 JSON 인수 테스트 전환

* test: 지난 아티클 서비스 테스트 설정 단순화

* test: 지난 아티클 조회를 컨트롤러 인수 테스트로 이전

* test: 테스트 헬퍼 메서드명 정리

* test: 컨트롤러 테스트 JSON 인수 테스트 전환

* test: 테스트 식별자와 파일명 정리

* refactor: 테스트 지원 코드 도메인별 분리

* refactor: 회원 탈퇴 테스트 fixture 단순화

* test: 챌린지 API 테스트를 통합 테스트로 전환

* refactor: 챌린지 서비스 테스트 fixture 단순화

* test: 컨트롤러 인수 테스트 RestAssured 전환

* test: ArticleService 테스트 픽스처 정리

* test: 챌린지 테스트 경계 정리

* docs: 테스트 작성 AGENTS 규칙 추가

* test: 서비스 테스트 커버리지 보강

* test: 비활성 회원 탈퇴 이벤트 테스트 삭제

* test: 매일메일 인수 테스트 데이터셋 정리